--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,70 @@
 asgiref==3.4.1
 autopep8==1.5.7
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.7
+defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.2.6
+django-allauth==0.42.0
+django-cors-headers==3.7.0
+django-crispy-forms==1.9.1
+django-decouple==2.1
+django-environ==0.4.5
+django-smart-selects==1.5.9
+djangorestframework==3.12.2
+docutils==0.16
+et-xmlfile==1.0.1
+Flask==1.1.2
+formulas==1.0.0
+graphviz==0.15
 gunicorn==20.1.0
+html5lib==1.0b10
+httplib2==0.20.2
+idna==2.10
+itsdangerous==1.1.0
+jdcal==1.4.1
+Jinja2==2.11.2
+lxml==4.6.3
+MarkupSafe==1.1.1
+mysqlclient==2.0.3
+numpy==1.19.4
+oauthlib==3.1.0
+openpyxl==3.0.5
+pandas==1.1.5
+Pillow==8.2.0
+psycopg2==2.9.1
 pycodestyle==2.7.0
-python-decouple==3.4
+pycparser==2.20
+pycryptodome==3.9.9
+Pygments==2.7.3
+PyJWT==2.0.0
+PyMySQL==1.0.2
+pyOpenSSL==20.0.1
+pyparsing==3.0.6
+PyPDF2==1.26.0
+python-dateutil==2.8.1
+python-frontmatter==0.5.0
+python-slugify==4.0.1
+python3-openid==3.2.0
 pytz==2021.1
+PyYAML==5.3.1
+regex==2020.11.13
+reportlab==3.6.3
+requests==2.25.1
+requests-oauthlib==1.3.0
+schedula==1.2.4
+six==1.15.0
 sqlparse==0.4.2
+text-unidecode==1.3
 toml==0.10.2
 Unipath==1.1
+urllib3==1.26.2
+webencodings==0.5.1
+Werkzeug==1.0.1
 whitenoise==5.3.0
+xhtml2pdf==0.2.1
+xlrd==2.0.1
+XlsxWriter==1.3.7
