--- a/core/my.cnf
+++ b/core/my.cnf
@@ -1,5 +1,5 @@
 [client]
-database = 'fusionti_amcm_db'
-user = 'fusionti_amcm_user'
-password = 'lfcaeuNGTW#;'
+database = 'amcm_db'
+user = 'root'
+password = ''
 default-character-set = utf8
