--- a/core/my.cnf
+++ b/core/my.cnf
@@ -1,5 +1,5 @@
 [client]
 database = 'fusionti_amcm_db'
 user = 'fusionti_amcm_user'
-password = 'lfcaeuNGTW#;'
+password = 'UZLs{R4s{Yr~'
 default-character-set = utf8
