--- a/core/my.cnf
+++ b/core/my.cnf
@@ -1,5 +1,5 @@
 [client]
-database = 'amcm_db'
-user = 'root'
-password = 'alex2727'
+database = 'fusionti_amcm_db'
+user = 'fusionti_amcm_user'
+password = 'UZLs{R4s{Yr~'
 default-character-set = utf8
