--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-asgiref==3.4.1
+asgiref==3.5.2
 autopep8==1.5.7
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+bs4==0.0.1
+cached-property==1.5.2
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
+charset-normalizer==2.0.12
 click==7.1.2
+commonmark==0.9.1
 cryptography==3.4.7
 defusedxml==0.6.0
+dictdiffer==0.9.0
 dj-database-url==0.5.0
 Django==3.2.6
 django-allauth==0.42.0
@@ -14,6 +21,7 @@ django-crispy-forms==1.9.1
 django-decouple==2.1
 django-environ==0.4.5
 django-smart-selects==1.5.9
+django-tinymce==3.4.0
 djangorestframework==3.12.2
 docutils==0.16
 et-xmlfile==1.0.1
@@ -29,13 +37,12 @@ jdcal==1.4.1
 Jinja2==2.11.2
 lxml==4.6.3
 MarkupSafe==1.1.1
-mysqlclient==2.0.3
+notion==0.0.28
 numpy==1.19.4
 oauthlib==3.1.0
 openpyxl==3.0.5
 pandas==1.1.5
 Pillow==8.2.0
-psycopg2==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
 pycryptodome==3.9.9
@@ -50,6 +57,7 @@ python-frontmatter==0.5.0
 python-slugify==4.0.1
 python3-openid==3.2.0
 pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==5.3.1
 regex==2020.11.13
 reportlab==3.6.3
@@ -57,9 +65,12 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 schedula==1.2.4
 six==1.15.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 text-unidecode==1.3
 toml==0.10.2
+tzdata==2022.1
+tzlocal==4.2
 Unipath==1.1
 urllib3==1.26.2
 webencodings==0.5.1
