--- a/core/my.cnf
+++ b/core/my.cnf
@@ -1,5 +1,5 @@
 [client]
-database = 'fusionti_amcm_db'
-user = 'fusionti_amcm_user'
-password = 'UZLs{R4s{Yr~'
+database = 'amcmcobros_amcm_db'
+user = 'amcmcobros_amcm_user'
+password = '!c$ijtmO?lp#'
 default-character-set = utf8
